--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,16 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
+        "jaybizzle/crawler-detect": "^1.2",
+        "jaybizzle/laravel-crawler-detect": "1.*",
+        "jenssegers/agent": "^2.6",
         "laravel/framework": "^7.0",
-        "laravel/tinker": "^2.0"
+        "laravel/sanctum": "^2.4",
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.1",
+        "league/glide": "^1.6",
+        "league/glide-laravel": "^1.0",
+        "torann/geoip": "^1.2"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
